--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
   <div class="bar14"></div>
   <div class="bar15"></div>
 
+  <div class="container">
+    <span class="text">Ethan Toenjes</span>
+  </div>
+
 </body>
 </html>
