--- a/index.html
+++ b/index.html
@@ -30,9 +30,16 @@
   <div class="bar14"></div>
   <div class="bar15"></div>
 
-  <div class="container">
-    <span class="text">Ethan Toenjes</span>
-  </div>
-
+    <div class ="wrapper">
+      <h1 class="content">
+        <span class="content">T</span>
+        <span class="content">O</span>
+        <span class="content">E</span>
+        <span class="content">N</span>
+        <span class="content">J</span>
+        <span class="content">E</span>
+        <span class="content">S</span>
+      </h1>
+</div>
 </body>
 </html>
